--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/digital-labs",
+            "baseHref": "/Site_portfolio/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -34,6 +35,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/Site_portfolio/",
               "budgets": [
                 {
                   "type": "initial",
