--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm ci
       
     - name: Build
-      run: npm run build
+      run: npm run build -- --configuration production --base-href /Site_portfolio/
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
