--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,30 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        
-    - name: Install dependencies
+    
+    - name: Install
       run: npm install
-      
+    
     - name: Build
-      run: npm run build
-      
-    - name: Deploy to GitHub Pages
+      run: npm run build -- --base-href=/Site_portfolio/
+    
+    - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist/digital-labs
+        publish_dir: dist/digital-labs
+        cname: false
