--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,23 @@
-name: Build and Deploy
+name: Deploy
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v4
     
-    - name: Setup Node
-      uses: actions/setup-node@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: 18
     
-    - name: Install
-      run: npm install
+    - run: npm install
+    - run: npm run build
     
-    - name: Build
-      run: npm run build -- --base-href=/Site_portfolio/
-    
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+    - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: dist/digital-labs
-        cname: false
