feat: configure Vercel deployment and fix TypeScript warnings
- Add Vercel-specific build configuration in angular.json
- Fix environment import path in app.component.ts
- Create environment files with proper configurations
- Add vercel.json for deployment settings
- Fix package.json syntax error (duplicate scripts)
- Add separate build commands for GitHub Pages and Vercel
- Resolve TypeScript compilation warnings for unused environment files

Breaking changes:
- Default baseHref changed from '/Site_portfolio/' to '/'
- New build configurations: 'vercel' for Vercel, 'production' for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "vercel-build": "ng build --configuration=vercel"
   },
   "private": true,
   "dependencies": {
