fix: add vercel-build script for deployment

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "vercel-build": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
